@@ -6,20 +6,24 @@ PLUGIN_FIND_INCLUDE (STROPTS stropts.h)
 
 CHECK_FUNCTION_EXISTS (openpty OPENPTY)
 
-IF (NOT OPENPTY AND HAVE_LIBUTIL)
+IF (OPENPTY)
+  SET (HAVE_OPENPTY 1)
+ENDIF ()
+
+IF (NOT HAVE_OPENPTY AND HAVE_LIBUTIL)
   CHECK_LIBRARY_EXISTS (util openpty "" UTIL_OPENPTY)
   IF (UTIL_OPENPTY)
     PLUGIN_LINK_LIBRARIES (util)
     SET (HAVE_OPENPTY 1)
-  ELSE ()
-    IF (EXISTS /dev/ptmx)
-      CHECK_FUNCTION_EXISTS (grantpt HAVE_UNIX98_PTYS)
-      IF (NOT HAVE_UNIX98_PTYS)
-        PLUGIN_DISABLE ()
-      ENDIF (NOT HAVE_UNIX98_PTYS)
-    ENDIF (EXISTS /dev/ptmx)
-  ENDIF (UTIL_OPENPTY)
-ENDIF (NOT OPENPTY AND HAVE_LIBUTIL)
+  ENDIF ()
+ENDIF ()
+
+IF (NOT HAVE_OPENPTY AND EXISTS /dev/ptmx)
+  CHECK_FUNCTION_EXISTS (grantpt HAVE_UNIX98_PTYS)
+  IF (NOT HAVE_UNIX98_PTYS)
+    PLUGIN_DISABLE ()
+  ENDIF (NOT HAVE_UNIX98_PTYS)
+ENDIF (NOT HAVE_OPENPTY AND EXISTS /dev/ptmx)
 
 PLUGIN_INCLUDE_DIRECTORIES (${unix}/plugins/AsynchFilePlugin)
 
