@@ -1,6 +1,8 @@
-CHECK_INCLUDE_FILE (sys/audioio.h HAVE_SYS_AUDIOIO_H)
-CHECK_INCLUDE_FILE (sun/audioio.h HAVE_SUN_AUDIOIO_H)
+PLUGIN_FIND_INCLUDE (SYS_AUDIOIO sys/audioio.h)
+PLUGIN_FIND_INCLUDE (SUN_AUDIOIO sun/audioio.h)
 
-IF (NOT HAVE_SYS_AUDIOIO_H OR NOT HAVE_SUN_AUDIOIO_H)
-    PLUGIN_DISABLE ()
+IF (NOT HAVE_SYS_AUDIOIO_H AND NOT HAVE_SUN_AUDIOIO_H)
+  PLUGIN_DISABLE ()
 ENDIF ()
+
+CONFIG_DEFINE (HAVE_SYS_AUDIOIO_H)
